@@ -8,6 +8,7 @@ Version 2.1.3
  * Robert Sowada
    - Changed version to 2.1.3
    - Bugfix: Detecting FAMCreated
+   - Bugfix: Maildir protocol provides uid
 
 Version 2.1.2		2005-03-26 17:28
  * Robert Sowada
